--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ deb-src http://archive.canonical.com/ubuntu focal partner
 
 Step-04: 
 Set the Resolver:
-#vim.tiny /etresolv.conf
+#vim.tiny /etc/resolv.conf
 
 nameserver 8.8.8.8
 
