--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ rocommunity  public default
 
 
 </pre>
-<img src="https://imgur.com/a/3JnGOdq" alt="Cacti Image">
+<img src="https://photos.app.goo.gl/ndqWs9spgiovFZpg8" alt="Cacti Image">
   </div>
 </body>
 </html>
