--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ rocommunity  public default
 
 
 </pre>
-<img src="https://photos.app.goo.gl/ndqWs9spgiovFZpg8" alt="Cacti Image">
+<button onclick="window.open('https://photos.app.goo.gl/ndqWs9spgiovFZpg8', '_blank')">Visit Website</button>
   </div>
 </body>
 </html>
